# RM-Task1

./: README.md
install/: local_setup.sh  setup.sh
install/node/lib/node/: publisher  subscriber
install/node/share/ament_index/resource_index/package_run_dependencies/: node
install/node/share/node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision/share/vision/: local_setup.sh  package.bash  package.sh  package.zsh
install/vision/share/vision/launch/: a.launch.py
log/: latest_build
src/node/: CMakeLists.txt
src/node/include/node/: publisher.hpp  subscriber.hpp
src/node/src/: publisher.cpp  subscriber.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/config/: a.yaml
